--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@swimlane/ngx-charts": "^10.0.0",
     "angular-tree-component": "7.2.0",
     "angular2-chartjs": "0.4.1",
+    "angular2-jwt": "^0.2.3",
     "angular2-toaster": "^7.0.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
